migration/migration.less
// -----------------------------
// Migration Styles
// -----------------------------

#migrated-site {

  // Stylseheet overrides
  // -----------------------------

  // Template wrapper (replace with corresponding template classes)
  .main.wrapper {
    width: 100%;
    max-width: 100%;
    margin: 0;
    padding-top: 0;
  }

  // Main content spacing (replace with corresponding template class)
  .main {
    padding: 0;
  }

  // Widget overflow to allow 10S overlays to display correctly
  .widget.content {
    overflow: inherit;
  }


  // Migration styles
  // -----------------------------

  // Replace with corresponding template values
  @container-width: 1024px;

  @spacing__first--desktop: 40px;
  @spacing__first--tablet:  30px;
  @spacing__first--mobile:  20px;

  @spacing--other: 30px;

  // Applies spacing to widgets to mimic container width
  .empty-zone,
  #page-zones__main:empty,
  #page-zones__main > .widget:not(.row):not(.button),
  .row:not(.widget):not(.row--width-no-padding) .row__container {
    margin-left: auto;
    margin-right: auto;
    max-width: @container-width;
    width: 100%;
  }

  .style--light, .style--accent, .style--background-image, .style--dark {
    .row:not(.widget):not(.row--width-no-padding) .row__container {
      width: 90%;
    }
  }

  .main.wrapper {
    width: 90%;
    max-width: @container-width;
    margin: 0 auto;
  }

  #page-zones__main > .widget.button {
    margin: 0 auto;
  }

  // Move spacing to first widget in the main zone (not sections)
  &.edit #page-zones__main-overlay + .widget:not(.row),
  #page-zones__main > .widget:not(.row):first-child {
    margin-top: @spacing__first--desktop;

    @media @tablet {
      margin-top: @spacing__first--tablet;
    }
    @media @mobile {
      margin-top: @spacing__first--mobile;
    }
  }

  // Move spacing to last widget in the main zone (not sections)
  #page-zones__main > .widget:not(.row):last-child {
    margin-bottom: @spacing__first--desktop;

    @media @tablet {
      margin-bottom: @spacing__first--tablet;
    }
    @media @mobile {
      margin-bottom: @spacing__first--mobile;
    }
  }

  // Add spacing to the top of a widget when it follows a section
  #page-zones__main > .row + .widget:not(.row) {
    margin-top: @spacing--other;
  }

  // Remove spacing if widget follows a light section (change to dark if template has a dark BG)
  #page-zones__main > .row.style--light + .widget:not(.row) {
    margin-top: 0;
  }

  // Adds spacing to the section when a widget is before it
  #page-zones__main > .widget:not(.row) + .row {
    margin-bottom: @spacing--other;
    margin-top: @spacing--other;

    &:not(:last-child) {
         margin-bottom: 0;
    }
  }

} // End of #migrated-site

